--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
+    "chartkick": "^3.0.2",
     "data-confirm-modal": "^1.6.2",
     "expose-loader": "^0.7.5",
+    "flatpickr": "^4.5.7",
     "jquery": "^3.3.1",
     "local-time": "^2.1.0",
     "popper.js": "^1.14.7",
+    "selectize": "^0.12.6",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
